[project]
name = "cloudflared-mcp-server"
version = "0.1.0"
description = "MCP server for managing Cloudflare Tunnels (cloudflared) via the Cloudflare API"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cloudflared-mcp-server = "cloudflared_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
